test/SemanticAnalysis/Names/DuplicateParamVar.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// CHECK: .loci:6:25: error: variable 'value' duplicates existing variable
// CHECK: .loci:6:14: note: because: variable previously defined here
int function(int value, int value) {
	return value;
}

// CHECK: 1 error generated.
